fix alignment

--- a/characters/empy3.css
+++ b/characters/empy3.css
@@ -68,8 +68,8 @@ display: block;
 align-items: left;
 align-self: left;
 justify-content: left;
-margin-top: 500px;
-margin-left: 18px;
+margin-top: 400px;
+margin-left: 15px;
 position:relative;
 image-rendering: pixelated;
 vertical-align: bottom;
